--- a/src/Pages/HomePage/homePage.scss
+++ b/src/Pages/HomePage/homePage.scss
@@ -1,5 +1,15 @@
 .table-container {
   margin-top: 1em !important;
-  background-color: #88c8eb;
-  color: #322329 !important;
+  background-color: #322329;
+  color: white !important;
+
+  .tableCell {
+    color: white !important;
+
+  }
+
+  .action {
+    text-decoration: none;
+    color: orange !important;
+  }
 }
